# trash-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
microservices/auth_service/: app.py  pyproject.toml
microservices/auth_service/config/database/: db_config.py
microservices/auth_service/controllers/: auth_controller.py  auth_user_controller.py  controller.py  data_validators.py  user_controller.py  validators.py
microservices/auth_service/exceptions/: controller_exceptions.py  repository_exceptions.py  service_exceptions.py  token_exceptions.py
microservices/auth_service/router/: router.py
microservices/auth_service/services/: auth_service.py  auth_user_service.py  token_handler.py  user_service.py
microservices/auth_service/src/: app.py
microservices/auth_service/src/controllers/: auth_controller.py  validators.py
microservices/auth_service/src/router/: router.py
microservices/auth_service/src/services/: auth_service.py  token_handler.py
microservices/auth_service/storage/entities/: entities.py  serializers.py
microservices/auth_service/storage/repositories/: auth_repository.py  auth_user_repository.py  repository.py
trash_microservices/auth_gateway/: dump.rdb  pyproject.toml
trash_microservices/auth_gateway/auth_gateway/: app.py
trash_microservices/auth_gateway/auth_gateway/controllers/: controller.py  decorators.py  validators.py
trash_microservices/auth_gateway/auth_gateway/exceptions/: service_exceptions.py
trash_microservices/auth_gateway/auth_gateway/interfaces/: repository_interface.py
trash_microservices/auth_gateway/auth_gateway/router/: auth_routes.py  item_routes.py  router.py
trash_microservices/auth_gateway/auth_gateway/services/: handlers.py  service.py
trash_microservices/item_service/: manage.py  pyproject.toml
trash_microservices/item_service/item_service/: main.py
trash_microservices/item_service/item_service/app/: app.py  settings.py
trash_microservices/item_service/item_service/application/: application.py  factory.py
trash_microservices/item_service/item_service/cache/: redis_cache_manager.py  redis_client.py  redis_client_factory.py
trash_microservices/item_service/item_service/config/: app_config.py  db_config.py
trash_microservices/item_service/item_service/controller/: controller.py  exceptions.py  validator.py  validators.py
trash_microservices/item_service/item_service/entities/: entities.py
trash_microservices/item_service/item_service/exceptions/: controller_exceptions.py  repository_exceptions.py
trash_microservices/item_service/item_service/interfaces/: application.py  base_application.py  base_controller.py  base_exception_handler.py  base_factory.py  base_repository.py  base_service.py  controller.py  repository.py  router.py  service.py
trash_microservices/item_service/item_service/migrations/: env.py
trash_microservices/item_service/item_service/models/: models.py
trash_microservices/item_service/item_service/repositories/: category_repository.py  crud_repository.py  exceptions.py  item_repository.py  review_repository.py
trash_microservices/item_service/item_service/repository/: entities.py  repository.py
trash_microservices/item_service/item_service/router/: router.py
trash_microservices/item_service/item_service/schemas/: annotated_types.py  category_schema.py  item_schema.py  review_schema.py
trash_microservices/item_service/item_service/service/: category_service.py  item_service.py  review_service.py  service.py
trash_microservices/item_service/migrations/: env.py
trash_microservices/item_service/tests/: main.py
trash_microservices/item_service/tests/migrations/: env.py
trash_tests/: pyproject.toml
trash_tests/microservices/auth_service/: conftest.py
trash_tests/test_microservices/test_auth/: conftest.py  test_auth.py
(+252 files in other folders)
