[tool.poetry]
name = "trash-project"
version = "0.1.0"
description = ""
authors = ["Arkhip McNutt <ortiz47@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
pypika = "^0.48.9"
psycopg2-binary = "^2.9.9"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
