[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Arkhip McNutt <ortiz47@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
fastapi = {extras = ["all"], version = "^0.110.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
