[tool.poetry]
name = "item-service"
version = "0.1.0"
description = ""
authors = ["Arkhip McNutt <ortiz47@mail.ru>"]
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
fastapi = {extras = ["all"], version = "^0.110.3"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
loguru = "^0.7.2"
pytest = "^8.2.0"
sqlalchemy-utils = "^0.41.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pytest-asyncio = "^0.23.6"
redis = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


